Fixing spacing on responsive devices

--- a/src/components/Blocks/GridStat/index.scss
+++ b/src/components/Blocks/GridStat/index.scss
@@ -77,3 +77,9 @@
     }
   }
 }
+
+@media screen and (max-width:767px) {
+  .grid-stats {
+    padding-bottom: 80px;
+  }
+}
