--- a/src/components/Global/Hero/Hero/index.scss
+++ b/src/components/Global/Hero/Hero/index.scss
@@ -42,5 +42,6 @@
 
   @media screen and (max-width: 991px) {
     padding-top: 50px;
+    padding-bottom: 10px;
   }
 }
