--- a/src/components/Global/Hero/HeroImageBottom/index.scss
+++ b/src/components/Global/Hero/HeroImageBottom/index.scss
@@ -78,3 +78,9 @@
     }
   }
 }
+
+@media screen and (max-width:767px) {
+  .hero-image-bottom-container {
+    margin-bottom: 0;
+  }
+}
